biological rules