@@ -19,17 +19,12 @@ import java.util.List;
 /**
  * Lance automatiquement le frontend OpenGL après le démarrage complet du backend.
  *
- * Déclenché par {@link ApplicationReadyEvent} (Tomcat prêt, routes enregistrées).
- * Le process frontend est lancé dans un virtual thread — non bloquant pour Spring.
+ * <p>Déclenché par {@link ApplicationReadyEvent} (Tomcat prêt, routes enregistrées).
+ * Le process frontend est lancé dans un virtual thread — non bloquant pour Spring.</p>
  *
- * Activation dans application.properties :
+ * <h3>Activation</h3>
  * <pre>
  *   pixellife.frontend.auto-launch=true
- * </pre>
- *
- * Ou via profil Maven/Spring :
- * <pre>
- *   mvn spring-boot:run -Dspring-boot.run.profiles=with-frontend
  * </pre>
  */
 @Component
@@ -43,19 +38,14 @@ public class FrontendLauncher {
     @EventListener(ApplicationReadyEvent.class)
     public void onApplicationReady() {
         if (!props.autoLaunch()) {
-            log.debug("Lancement automatique du frontend désactivé (pixellife.frontend.auto-launch=false)");
+            log.debug("Lancement automatique du frontend désactivé (auto-launch=false)");
             return;
         }
-
-        Thread.ofVirtual()
-                .name("frontend-launcher")
-                .start(this::launchFrontend);
+        Thread.ofVirtual().name("frontend-launcher").start(this::launchFrontend);
     }
 
-    /**
-     * Résout le chemin du jar frontend.
-     * Priorité : propriété explicite > recherche automatique dans ../frontend/target/.
-     */
+    // ─── Résolution des ressources ────────────────────────────────────────────
+
     private Path resolveFrontendJar() {
         if (props.jarPath() != null && !props.jarPath().isBlank()) {
             Path explicit = Path.of(props.jarPath());
@@ -63,7 +53,6 @@ public class FrontendLauncher {
             log.warn("Jar frontend introuvable au chemin configuré : {}", explicit);
         }
 
-        // Recherche automatique relative au répertoire courant
         Path[] candidates = {
                 Path.of("../frontend/target/frontend-1.0-SNAPSHOT.jar"),
                 Path.of("frontend/target/frontend-1.0-SNAPSHOT.jar"),
@@ -72,31 +61,23 @@ public class FrontendLauncher {
 
         for (Path candidate : candidates) {
             if (Files.exists(candidate)) {
-                log.info("Jar frontend trouvé automatiquement : {}", candidate.toAbsolutePath());
+                log.info("Jar frontend trouvé : {}", candidate.toAbsolutePath());
                 return candidate.toAbsolutePath();
             }
         }
-
         return null;
     }
 
-    /**
-     * Retourne l'id de la simulation à passer au frontend.
-     * Si autoStartSimulation=true, démarre une nouvelle simulation et retourne son id.
-     */
     private long resolveSimulationId() {
         if (props.autoStartSimulation()) {
-            log.info("Démarrage automatique d'une simulation pour le frontend...");
             var response = simulationService.startSimulation(SimulationConfig.defaults());
             log.info("Simulation #{} démarrée pour le frontend", response.simulationId());
             return response.simulationId();
         }
 
-        if (props.simulationId() > 0) {
-            return props.simulationId();
-        }
+        if (props.simulationId() > 0) return props.simulationId();
 
-              var simulations = simulationService.listSimulations();
+        var simulations = simulationService.listSimulations();
         if (!simulations.isEmpty()) {
             long lastId = simulations.getFirst().id();
             log.info("Utilisation de la dernière simulation en base : #{}", lastId);
@@ -104,9 +85,10 @@ public class FrontendLauncher {
         }
 
         log.info("Aucune simulation existante, création automatique...");
-        var response = simulationService.startSimulation(SimulationConfig.defaults());
-        return response.simulationId();
+        return simulationService.startSimulation(SimulationConfig.defaults()).simulationId();
     }
+
+    // ─── Lancement du process ─────────────────────────────────────────────────
 
     private void launchFrontend() {
         Path jarPath = resolveFrontendJar();
@@ -120,30 +102,16 @@ public class FrontendLauncher {
         }
 
         long simId = resolveSimulationId();
-
         List<String> command = buildCommand(jarPath, simId);
         log.info("Lancement du frontend : {}", String.join(" ", command));
 
         try {
-            ProcessBuilder pb = new ProcessBuilder(command);
-
-            // Redirige stderr vers stdout pour capturer tous les logs du frontend
-            pb.redirectErrorStream(true);
-
-            Process process = pb.start();
-
-            // logs from frontend to SLF4J
-            Thread.ofVirtual()
-                    .name("frontend-stdout")
-                    .start(() -> pipeOutput(process));
+            Process process = new ProcessBuilder(command).redirectErrorStream(true).start();
+            Thread.ofVirtual().name("frontend-stdout").start(() -> pipeOutput(process));
 
             int exitCode = process.waitFor();
-            if (exitCode != 0) {
-                log.warn("Frontend terminé avec le code de sortie {}", exitCode);
-            } else {
-                log.info("Frontend fermé proprement");
-            }
-
+            if (exitCode != 0) log.warn("Frontend terminé avec le code {}", exitCode);
+            else               log.info("Frontend fermé proprement");
         } catch (IOException e) {
             log.error("Impossible de lancer le frontend : {}", e.getMessage(), e);
         } catch (InterruptedException e) {
@@ -152,17 +120,25 @@ public class FrontendLauncher {
         }
     }
 
+    /**
+     * Construit la commande d'exécution.
+     *
+     * <p><b>Ordre correct :</b> {@code java [JVM_ARGS] -jar frontend.jar [APP_ARGS]}<br>
+     * Bugfix : les args JVM étaient placés après {@code -jar}, ce qui les faisait
+     * interpréter comme arguments d'application, ignorant {@code --enable-preview}.</p>
+     */
     private List<String> buildCommand(Path jarPath, long simId) {
         List<String> cmd = new ArrayList<>();
         cmd.add(ProcessHandle.current().info().command().orElse("java"));
-        cmd.add("-jar");
 
+        // JVM args AVANT -jar (ordre obligatoire)
         if (props.jvmArgs() != null && !props.jvmArgs().isBlank()) {
             for (String arg : props.jvmArgs().split("\\s+")) {
                 if (!arg.isBlank()) cmd.add(arg);
             }
         }
 
+        cmd.add("-jar");
         cmd.add(jarPath.toString());
         cmd.add(props.backendUrl());
         cmd.add(String.valueOf(simId));
@@ -172,9 +148,7 @@ public class FrontendLauncher {
     private void pipeOutput(Process process) {
         try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
             String line;
-            while ((line = reader.readLine()) != null) {
-                log.info("[frontend] {}", line);
-            }
+            while ((line = reader.readLine()) != null) log.info("[frontend] {}", line);
         } catch (IOException e) {
             log.debug("Pipe frontend fermé : {}", e.getMessage());
         }
